# stm_display_rust

./: .gdbinit  .gitignore  Cargo.toml  Makefile  README.md  build.rs  custom_link.x  iosevka.raw  memory.x  regen  run
.cargo/: config
debian/: changelog  control  copyright  display-firmware.install  rules
firmware/: Cargo.toml  Makefile  memory.x  openocd.cfg  run-alternate
firmware/.cargo/: config  config.toml
firmware/src/: i2ceeprom.rs  konami_mode.rs  main.rs  regutil.rs  spiflash.rs  test_mode.rs
lib/: Cargo.toml
lib/src/: console.rs  font_console.rs  font_icons.rs  font_large.rs  font_medium.rs  font_normal.rs  font_vlarge.rs  framebuf.rs  icon.rs  image.rs  interface.rs  lib.rs
simulator/: Cargo.toml  Makefile
simulator/src/: main.rs
src/: console.rs  draw.rs  font.rs  font_console.idx  font_large.idx  font_large.raw  font_light.idx  font_light.rs  font_medium.idx  font_medium.rs  framebuf.rs  graphics.rs  i2ceeprom.rs  icon.rs  interface.rs  keypad.rs  konami_mode.rs  logo_mlz.raw  lorem.rs  main.rs  phytron.rs  regutil.rs  spiflash.rs  states.rs  terminus.rs  test_mode.rs  timer.rs  util.rs
util/: bootmode.py  clock.py  colormap.py  convert_2bpp.py  demo.py  drawlib.py  generate_font.py  image.py  logo.py  play.py  plot.py  regen-fonts  set_startup.py  show_bitmap.py  show_charset.py  show_console.py  test_proto.py
