[package]
name = "stm_display"
version = "0.0.1"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
description = "Demo display app..."
license = "GPL-2.0+"

[profile.release]
lto = true
codegen-units = 1
debug = true

[dependencies]
nb = "0.1"
heapless = { version = "0.4", features = ["const-fn", "smaller-atomics"] }
btoi = { version = "0.4", default-features = false }
bresenham = "0.1"
derive-new = "0.5"
bit_field = "0.9"
cortex-m = "0.5"
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3"
panic-semihosting = "0.5"
embedded-hal = { version = "0.2", features = ["unproven"] }
stm32f4 = { path = "../ext/stm32-rs/stm32f4", features = ["stm32f429", "rt"] }
stm32f4xx-hal = { path = "../ext/stm32f4xx-hal", features = ["stm32f429", "rt"] }

[patch.crates-io]
stm32f4 = { path = "../ext/stm32-rs/stm32f4" }
