[package]
name = "stm_display"
version = "0.0.1"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
description = "Firmware for MLZ control box display"
license = "GPL-2.0+"
edition = "2018"

[profile.release]
lto = true
codegen-units = 1
debug = true

[dependencies]
nb = "0.1.1"
heapless = { version = "0.4.1", features = ["const-fn", "smaller-atomics"] }
btoi = { version = "0.4.0", default-features = false }
bresenham = "0.1.1"
arm = { package = "cortex-m", version = "0.5.8" }
cortex-m-rt = "0.6.7"
cortex-m-semihosting = "0.3.2"
panic-semihosting = "0.5.1"
embedded-hal = "0.2.2"
stm32f4 = { version = "0.4.0", features = ["rt", "stm32f429"] }
hal = { package = "stm32f4xx-hal", version = "0.2.6", features = ["rt", "stm32f429"] }
