[package]
name = "display_firmware"
version = "1.17.0"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
description = "Firmware for MLZ control box display"
license = "GPL-2.0+"
edition = "2018"

[profile.release]
lto = true
codegen-units = 1
debug = true

[dependencies]
nb = "1.0"
wheelbuf = "0.2"
heapless = "0.5.0"
cortex-m = "0.6.0"
cortex-m-rt = "0.6.6"
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2.0"
embedded-hal = "0.2.2"
stm32f4 = "0.11.0"

[dependencies.hal]
package = "stm32f4xx-hal"
version = "0.8.3"
features = ["rt", "stm32f429"]

[dependencies.display]
path = "../lib"

[features]
test-mode = ["display/test-mode"]
customer-mlz = ["display/customer-mlz"]
default = ["customer-mlz"]
