[package]
name = "display_firmware"
version = "1.27.0"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
description = "Firmware for MLZ control box display"
license = "GPL-2.0+"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
debug = true

[dependencies]
nb = "1.0"
wheelbuf = "0.2"
heapless = "0.9"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
panic-halt = "1.0"
stm32f4xx-hal = { version = "0.22", features = ["stm32f429"] }
# for debugging:
#cortex-m-semihosting = "0.5.0"
#panic-semihosting = "0.6"

[dependencies.display]
path = "../lib"

[features]
test-mode = ["display/test-mode"]
customer-mlz = ["display/customer-mlz"]
customer-psi = ["display/customer-psi"]
customer-fau = ["display/customer-fau"]
default = ["customer-mlz"]
