[package]
name = "display"
# This is the version used for the firmware version (major.minor)!
version = "1.27.0"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
description = "Firmware for MLZ control box display (library)"
license = "GPL-2.0+"
edition = "2021"

[dependencies]
btoi = { version = "0.4.0", default-features = false }
bresenham = "0.1.1"
pkg-version = "1.0"

[features]
test-mode = []
customer-mlz = []
customer-psi = []
customer-fau = []
