[package]
name = "display_simulator"
version = "1.25.0"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
description = "Simulator for MLZ control box display"
license = "GPL-2.0+"
edition = "2018"

[dependencies]
nix = "0.24"
minifb = { version = "0.23", default-features = false, features = ["x11"] }
clap = { version = "3.0", features = ["derive"] }
crossbeam-channel = "0.5.1"
display = { path = "../lib" }

[features]
default = ["customer-mlz"]
customer-mlz = ["display/customer-mlz"]
customer-psi = ["display/customer-psi"]
