[package]
name = "display_simulator"
version = "1.27.0"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
description = "Simulator for MLZ control box display"
license = "GPL-2.0+"
edition = "2021"

[dependencies]
nix = { version = "0.30", features = ["fs", "term"] }
minifb = { version = "0.28", default-features = false, features = ["x11"] }
clap = { version = "4.1", features = ["derive"] }
crossbeam-channel = "0.5.1"
display = { path = "../lib" }

[features]
default = ["customer-mlz"]
customer-mlz = ["display/customer-mlz"]
customer-psi = ["display/customer-psi"]
customer-fau = ["display/customer-fau"]
